--- a/dino.glade
+++ b/dino.glade
@@ -38,38 +38,23 @@
 		<widget class="GtkMenu" id="menuitem1_menu">
 
 		  <child>
-		    <widget class="GtkImageMenuItem" id="new1">
+		    <widget class="GtkImageMenuItem" id="clear_all1">
 		      <property name="visible">True</property>
-		      <property name="label">gtk-new</property>
-		      <property name="use_stock">True</property>
-		      <signal name="activate" handler="on_new1_activate" last_modification_time="Thu, 16 Dec 2004 18:39:06 GMT"/>
-		    </widget>
-		  </child>
+		      <property name="label" translatable="yes">_Clear all</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_clear_all1_activate" last_modification_time="Thu, 16 Dec 2004 18:39:06 GMT"/>
 
-		  <child>
-		    <widget class="GtkImageMenuItem" id="open1">
-		      <property name="visible">True</property>
-		      <property name="label">gtk-open</property>
-		      <property name="use_stock">True</property>
-		      <signal name="activate" handler="on_open1_activate" last_modification_time="Thu, 16 Dec 2004 18:39:06 GMT"/>
-		    </widget>
-		  </child>
-
-		  <child>
-		    <widget class="GtkImageMenuItem" id="save1">
-		      <property name="visible">True</property>
-		      <property name="label">gtk-save</property>
-		      <property name="use_stock">True</property>
-		      <signal name="activate" handler="on_save1_activate" last_modification_time="Thu, 16 Dec 2004 18:39:06 GMT"/>
-		    </widget>
-		  </child>
-
-		  <child>
-		    <widget class="GtkImageMenuItem" id="save_as1">
-		      <property name="visible">True</property>
-		      <property name="label">gtk-save-as</property>
-		      <property name="use_stock">True</property>
-		      <signal name="activate" handler="on_save_as1_activate" last_modification_time="Thu, 16 Dec 2004 18:39:06 GMT"/>
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image12">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-new</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 
@@ -155,7 +140,7 @@
 		      <signal name="activate" handler="on_add_track1_activate" last_modification_time="Wed, 02 Feb 2005 17:00:05 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image1">
+			<widget class="GtkImage" id="image13">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-add</property>
 			  <property name="icon_size">1</property>
@@ -177,7 +162,7 @@
 		      <signal name="activate" handler="on_delete_track1_activate" last_modification_time="Wed, 02 Feb 2005 17:00:05 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image2">
+			<widget class="GtkImage" id="image14">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-delete</property>
 			  <property name="icon_size">1</property>
@@ -199,7 +184,7 @@
 		      <signal name="activate" handler="on_edit_track_properties1_activate" last_modification_time="Sun, 20 Feb 2005 11:13:13 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image3">
+			<widget class="GtkImage" id="image15">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-properties</property>
 			  <property name="icon_size">1</property>
@@ -227,7 +212,7 @@
 		      <signal name="activate" handler="on_add_pattern1_activate" last_modification_time="Wed, 02 Feb 2005 23:38:02 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image4">
+			<widget class="GtkImage" id="image16">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-add</property>
 			  <property name="icon_size">1</property>
@@ -249,7 +234,7 @@
 		      <signal name="activate" handler="on_delete_pattern1_activate" last_modification_time="Wed, 02 Feb 2005 23:38:02 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image5">
+			<widget class="GtkImage" id="image17">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-delete</property>
 			  <property name="icon_size">1</property>
@@ -271,7 +256,7 @@
 		      <signal name="activate" handler="on_edit_pattern_properties1_activate" last_modification_time="Wed, 21 Sep 2005 20:40:30 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image6">
+			<widget class="GtkImage" id="image18">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-properties</property>
 			  <property name="icon_size">1</property>
@@ -299,7 +284,7 @@
 		      <signal name="activate" handler="on_add_controller1_activate" last_modification_time="Sun, 18 Sep 2005 17:22:39 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image7">
+			<widget class="GtkImage" id="image19">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-add</property>
 			  <property name="icon_size">1</property>
@@ -321,7 +306,7 @@
 		      <signal name="activate" handler="on_delete_controller1_activate" last_modification_time="Sun, 18 Sep 2005 17:22:39 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image8">
+			<widget class="GtkImage" id="image20">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-delete</property>
 			  <property name="icon_size">1</property>
@@ -356,7 +341,7 @@
 		      <signal name="activate" handler="on_play1_activate" last_modification_time="Tue, 01 Feb 2005 20:06:00 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image9">
+			<widget class="GtkImage" id="image21">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-media-play</property>
 			  <property name="icon_size">1</property>
@@ -377,7 +362,7 @@
 		      <signal name="activate" handler="on_stop1_activate" last_modification_time="Tue, 01 Feb 2005 20:06:00 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image10">
+			<widget class="GtkImage" id="image22">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-media-pause</property>
 			  <property name="icon_size">1</property>
@@ -398,7 +383,7 @@
 		      <signal name="activate" handler="on_go_to_start1_activate" last_modification_time="Tue, 01 Feb 2005 20:06:00 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image11">
+			<widget class="GtkImage" id="image23">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-media-previous</property>
 			  <property name="icon_size">1</property>
@@ -432,7 +417,7 @@
 		      <signal name="activate" handler="on_about1_activate" last_modification_time="Thu, 16 Dec 2004 18:39:06 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image12">
+			<widget class="GtkImage" id="image24">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-about</property>
 			  <property name="icon_size">1</property>
